--- a/My repo/index.html
+++ b/My repo/index.html
@@ -18,6 +18,7 @@
     <script src="./app.js" type="module">
     </script>
 <!-- <script src="./01-variables-and-data-types.js" type="module"></script> -->
-<script src="./02-operators.js"></script>
+<!-- <script src="./02-operators.js"></script> -->
+<script src="./04-conditions.js"></script>
 </body>
 </html>
