--- a/My repo/index.html
+++ b/My repo/index.html
@@ -19,6 +19,6 @@
     </script>
 <!-- <script src="./01-variables-and-data-types.js" type="module"></script> -->
 <!-- <script src="./02-operators.js"></script> -->
-<script src="./04-conditions.js"></script>
+<script src="./06-loops.js"></script>
 </body>
 </html>
