--- a/My repo/Part_1/index.html
+++ b/My repo/Part_1/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -21,4 +21,4 @@
 <!-- <script src="./02-operators.js"></script> -->
 <script src="./06-loops.js"></script>
 </body>
-</html>
+</html> -->
