--- a/My repo/Part_1/index.html
+++ b/My repo/Part_1/index.html
@@ -17,8 +17,8 @@
 
     <script src="./app.js" type="module">
     </script>
-<!-- <script src="./01-variables-and-data-types.js" type="module"></script> -->
+<script src="./01-variables-and-data-types.js" type="module"></script> -->
 <!-- <script src="./02-operators.js"></script> -->
-<script src="./06-loops.js"></script>
+<!-- <script src="./06-loops.js"></script>
 </body>
 </html> -->
