--- a/My repo/Part_2/index.html
+++ b/My repo/Part_2/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,4 +8,22 @@
 </head>
 <body>
 <script src="app.js" type="module"></script></html>
-<script src="strings.js" type="module"></script></html>
+<script src="strings.js" type="module"></script></html> -->
+<!-- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <!-- <script src="app.js" type="module"></script>
+    <script src="strings.js" type="module"></script> -->
+    <!-- <script src="constructors.js" type="module" ></script>  -->
+    <!-- <script src="casting.js" type="module" ></script>  -->
+    <!-- <script src="switch.js" type="module" ></script>  -->
+    <!-- <script src="loops.js" type="module" ></script> 
+</body>
+</html> --> -->
